[gd_scene load_steps=4 format=3 uid="uid://c5agow2cecj8v"]

[ext_resource type="Script" uid="uid://cibetpbf3vp1t" path="res://game/game.gd" id="1_qdjc2"]
[ext_resource type="Texture2D" uid="uid://caetxtntab8sm" path="res://icon.svg" id="2_vasa2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vasa2"]
size = Vector3(1.24609, 0.0996094, 1.29004)

[node name="Game" type="Node"]
script = ExtResource("1_qdjc2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Multiplayer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = 5.0
offset_right = -21.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Multiplayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -46.5
offset_right = 102.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Arena Shooter"

[node name="NameInput" type="LineEdit" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1

[node name="VSplitContainer2" type="VSplitContainer" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="VSplitContainer" type="VSplitContainer" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2

[node name="IPInput" type="LineEdit" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP"
alignment = 1

[node name="Join" type="Button" parent="UI/Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Ingame" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Ingame"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 137.0
offset_bottom = 20.0
grow_vertical = 2

[node name="HostAddrLabel" type="Label" parent="UI/Ingame/VBoxContainer"]
layout_mode = 2
text = "Waiting for host..."

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://ccp7a5trw734p")
spawn_path = NodePath("..")

[node name="Spawnpoints" type="Node3D" parent="."]

[node name="Spawnpoint" type="Marker3D" parent="Spawnpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)

[node name="Spawnpoint2" type="Marker3D" parent="Spawnpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.6051, 2.70004, 0)

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)

[node name="Sprite" type="Sprite3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
texture = ExtResource("2_vasa2")

[node name="CollisionShape" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_vasa2")

[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Join" to="." method="_on_join_pressed"]
